refactor(core): upgrade spring boot and fix backend/frontend quality issues